frontend/test/should_pass/alternative_repl.grg
rule r
{
	alternative foo {
		foocase {
			y:Node;

			modify {
				x --> y;
			}
		}
	}
	
	modify {
		x:Node;
		alternative foo;
	}
}

pattern p
{
	alternative foo {
		foocase {
			y:Node;

			modify {
				x --> y;
			}
		}
	}
	
	modify {
		x:Node;
		alternative foo;
	}
}
