frontend/test/should_fail/independent_010.grg
pattern p
{
	independent {
        alternative {
			One {
				.;
				modify {
				}
			}
			Two {
				. -- .;
				modify {
				}
			}
        }
	}

	replace {
	}
}
